# contextfs

./: .gitignore  CLAUDE.md  README.md  docker-compose.sync.yml  pyproject.toml  railway.toml
.github/workflows/: ci.yml  docs.yml  release.yml
claude-plugin/: package.json  plugin.json
docker/: Dockerfile.mcp  Dockerfile.sync
docs/: orchestrator.md
docs/hooks/: memory-extraction-hooks.json
scripts/: release.sh
service/api/: admin_routes.py  auth_routes.py  billing_routes.py  main.py  memories_routes.py  sync_routes.py  team_routes.py
service/db/: models.py  session.py
src/contextfs/: __init__.py  autoindex.py  cli.py  config.py  core.py  embedding.py  fts.py  mcp_server.py  rag.py  schemas.py  storage_router.py
src/contextfs/cli/: __init__.py  cloud.py  extract.py  index.py  orchestrator.py  server.py  sync.py
src/contextfs/encryption/: client_crypto.py
src/contextfs/filetypes/: registry.py
src/contextfs/filetypes/handlers/: __init__.py  cpp.py  csharp.py  go.py  java.py  php.py  ruby.py  rust.py  shell.py  swift.py  typescript.py
src/contextfs/mcp/: server.py
src/contextfs/migrations/versions/: 007_add_authoritative.py  008_add_auth_tables.py  009_add_password_auth.py  010_add_devices_table.py
src/contextfs/orchestrator/: __init__.py  agent.py  monitor.py  orchestrator.py  worker.py
src/contextfs/plugins/: __init__.py  claude_code.py  codex.py  gemini.py
src/contextfs/sync/: cli.py  client.py  mcp_tools.py  postgres.py  protocol.py  vector_clock.py
src/contextfs/web/: __init__.py  server.py
src/contextfs/web/static/css/: style.css
src/contextfs/web/static/js/: app.js  app.js.map  app.ts  types.ts
src/contextfs/web/templates/: index.html
tests/: conftest.py  test_incremental_hook.py
tests/integration/: test_api_routes.py  test_mcp.py  test_rag.py  test_sync_protocol.py  test_webhooks.py
tests/unit/: test_orchestrator.py
